Push proto site Ensure styles allow for responsive experience on mobile, tablet, pc. Style leaves something to be desired. Consider a minimum viable product.

--- a/src/components/About/AboutMe.module.css
+++ b/src/components/About/AboutMe.module.css
@@ -8,21 +8,13 @@
   height: min-content;
   width: 94vw;
   align-items: center;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   flex-direction: column;
   max-width: 470px;
   max-height: 800px;
 }
-.bioText > * {
-  margin-bottom: 3px;
-}
-
-.bioText > p {
-  font-size: 20px;
-}
-
-.bioText > h3 {
-  font-size: 24px;
+.bioText {
+  margin: 5px 5px 0px 8px;
 }
 
 .frame {
@@ -62,13 +54,19 @@
   padding: 5px 10px 5px 10px;
   display: flex;
   flex-direction: column;
-  max-width: 637px;
+  max-width: 627.5px;
   height: fit-content;
   width: 94vw;
+  min-width: 341.5px;
+}
+
+.bioTitle {
+  margin: 5px 8px 0px 8px;
+  font-size: 26px;
 }
 
 .icon {
-  height: 3.5vw;
+  height: 30px;
   width: auto;
   padding: 3px;
 }
@@ -97,17 +95,14 @@
     height: 25px;
     width: auto;
   }
-  .bioText > p {
-    font-size: 12px;
-  }
-
-  .bioText > h3 {
+  .bioText {
     font-size: 14px;
   }
-}
 
-@media (max-width: 750px) {
+  .bioTitle {
+    font-size: 18px;
+  }
   .caption {
-    font-size: 16px;
+    font-size: 22px;
   }
 }
