--- a/src/components/Project/Project.module.css
+++ b/src/components/Project/Project.module.css
@@ -17,17 +17,18 @@
 
 .screenshotContainer {
   background-color: rgba(255, 192, 203, 0.483);
-  width: 647.5px;
+  width: 643.5px;
   height: 560px;
   display: flex;
   justify-content: center;
   align-content: center;
   border: 2px rgba(255, 192, 203, 0.624) solid;
+  border-radius: 1%;
 }
 
 .screenshot {
   object-fit: fill;
-  max-width: 647.5px;
+  max-width: 643.5px;
   height: auto;
 }
 
@@ -71,7 +72,7 @@ h3 {
   margin: 0 0 0 8px;
 }
 
-p {
+.projectDescription {
   font-size: 18px;
   margin: 4px 8px 4px 8px;
 }
@@ -83,7 +84,7 @@ p {
   }
 
   h3 {
-    font-size: 14px;
+    font-size: 16px;
   }
 
   .screenshotContainer {
@@ -113,7 +114,7 @@ p {
     height: 28px;
   }
 
-  p {
-    font-size: 12px;
+  .projectDescription {
+    font-size: 14px;
   }
 }
